# RBM-MDL-Layer

./: .atlas-config.yaml  ATLAS_STATUS.md  Architectural_Constraints.md  Architecture_Audit_Report.md  Architecture_Validation_Report.md  CLAUDE.md  Constitutional_Traceability_Review.md  DOCTRINE_FREEZE.md  ERA1_EVIDENCE.md  Immutable_Core_Charter.md  Jurisdiction_Stack_Ratification_Analysis.md  MDL_Capability_Framework.md  MDL_Consumer_Model.md  MDL_Consumption_Model.md  MDL_Event_Model.md  MDL_External_Interfaces.md  MDL_Infrastructure_Constitution.md  MDL_Infrastructure_Roadmap.md  MDL_Internal_Architecture.md  MDL_Lifecycle.md  MDL_Ownership_Analysis.md  MDL_Repository_Blueprint.md  MDL_Responsibility_Matrix.md  MDL_Revocation_And_Invalidation.md  MDL_Truth_Ownership_Matrix.md  MDL_vs_Industry_Systems.md  Migration_Strategy_CFRS_to_RBM_MDL.md  Open_Questions_and_Risks.md  README.md  Ratification_Authority.md  Ratification_Log.md  Repository_Independence_Review.md  Repository_Ownership_Report.md
audit/: README.md
distribution/: README.md
engineering/: MDL_Component_Contracts.md  MDL_Domain_Model.md  (+5 more)
runtime/: README.md  pyproject.toml  requirements.txt
runtime/client/: __init__.py  mdl_client.py
runtime/demo/: era1_demo.py
runtime/mdl/: __init__.py  audit.py  determination.py  distribution.py  domain.py  errors.py  governance.py  interface.py  jurisdiction.py  override.py  registry.py  resolution.py  runtime.py  seeds.py  snapshot.py  versioning.py
runtime/service/: __init__.py  app.py  handler.py
runtime/tests/: test_client_http.py  test_runtime.py
(+12 files in other folders)
